bin/testsuite/tests/compiler/src/errors/compiler4990.swg
#global testerror "Err0109"
#test
{
    discard @cos(0)
}